Fix concurrency problem in SharedTable (#416)
* Fix concurrency problem in SharedTable

Provides a synchronized lock so that the table state is consistent
across threads. Fixes #415

* Remove deprecated Double(double) constructors